--- a/package.json
+++ b/package.json
@@ -1,46 +1,36 @@
 {
-  "name": "backend",
+  "name": "api",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "./src/index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc",
-    "dev": "ts-node src/index.ts",
-    "start": "nodemon "
+    "start": "nodemon",
+    "test": "mocha -w ./tests/**/*.spec.js"
   },
-  "keywords": [],
-  "author": "",
   "license": "ISC",
+  "engines": {
+    "node": ">=12.18.3",
+    "npm": ">=6.14.6"
+  },
   "dependencies": {
-    "axios": "^1.1.2",
-    "bcryptjs": "^2.4.3",
-    "body-parser": "^1.20.0",
+    "axios": "^0.27.2",
+    "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.2",
-    "express": "^4.18.1",
-    "jsonwebtoken": "^8.5.1",
-    "mercadopago": "^1.5.14",
-    "mongoose": "^6.6.1",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "mongoose": "^7.0.4",
     "morgan": "^1.10.0",
-    "nodemailer": "^6.8.0",
-    "nodemon": "^2.0.20",
-    "query-string": "^7.1.1",
-    "stripe": "^10.12.0"
+    "node-fetch": "^3.2.8",
+    "pg": "^8.5.1",
+    "sequelize": "^6.3.5"
   },
   "devDependencies": {
-    "@types/cors": "^2.8.12",
-    "@types/express": "^4.17.14",
-    "@types/mongoose": "^5.11.97",
-    "@types/morgan": "^1.9.3",
-    "@types/node": "^18.7.18",
-    "@typescript-eslint/eslint-plugin": "^5.38.1",
-    "@typescript-eslint/parser": "^5.38.1",
-    "eslint": "^8.24.0",
-    "eslint-plugin-react": "^7.31.8",
-    "ts-node": "^10.9.1",
-    "ts-node-dev": "^2.0.0",
-    "ts-standard": "^11.0.0",
-    "typescript": "^4.8.3"
+    "chai": "^4.2.0",
+    "mocha": "^8.2.1",
+    "nodemon": "^2.0.19",
+    "supertest": "^6.0.1",
+    "supertest-session": "^4.1.0"
   }
 }
